// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email passwordless renders a captcha 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="social_buttons_pane"
    />
    <div
      data-__type="pane_separator"
    />
    <p>
      passwordlessEmailAlternativeInstructions
    </p>
    <div
      data-__type="email_pane"
    />
    <div
      data-__type="captcha_pane"
    />
  </div>
</DocumentFragment>
`;

exports[`email passwordless renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="social_buttons_pane"
    />
    <div
      data-__type="pane_separator"
    />
    <p>
      passwordlessEmailAlternativeInstructions
    </p>
    <div
      data-__type="email_pane"
    />
  </div>
</DocumentFragment>
`;
